Bug 1963956 - Check valid window when creating GeckoView's StreamListener. r=geckoview-reviewers,nika

When I added a check whether window is destroyed by bug 1957566, I found
new issue that `GeckoViewStreamListener` doesn't have valid window.

I think we should abort this stream due no valid window.

Differential Revision: https://phabricator.services.mozilla.com/D247567